# stamping

./: .gitignore  Cargo.toml  README.md
src/: main.rs  services.rs  settings.rs  specific.rs
src/services/: primal.rs
src/settings/: general.rs  state.rs
templates/: 404.html  base.html  sitemap.xml
