[package]
authors = ["Firstname Lastname <example@email.net>"]
description = "Some text"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "project-name"
readme = "README.md"
version = "0.1.0"

[dependencies]
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-http = "2.2.1"
actix-multipart = "0.3.0"
actix-rt = "2.3.0"
actix-session = "0.4.1"
actix-web = "3.3.2"
chrono = "0.4.19"
env_logger = "0.9.0"
futures = "0.3.17"
sanitize-filename = "0.3.0"
serde_json = "1.0.68"

[dependencies.serde]
features = ["derive"]
version = "1.0.130"

[dependencies.tera]
version = "1.13.0"
